--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "rest-express",
+  "name": "peochain-monorepo",
+  "private": true,
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
@@ -8,7 +9,10 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -46,21 +50,25 @@
     "@tanstack/react-query": "^5.60.5",
     "@types/canvas-confetti": "^1.9.0",
     "@types/socket.io-client": "^1.4.36",
+    "bcrypt": "^5.1.1",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "connect-pg-simple": "^10.0.0",
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "csv-parse": "^5.6.0",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.3.0",
-    "express": "^4.21.2",
-    "express-rate-limit": "^7.5.0",
+    "express": "4.19.2",
+    "express-rate-limit": "^7.2.0",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.2.4",
+    "ioredis": "^5.3.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
@@ -86,12 +94,18 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/bcrypt": "^5.0.2",
     "@types/connect-pg-simple": "^7.0.3",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/csurf": "^1.11.5",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/ioredis": "^5.0.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
@@ -100,15 +114,27 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
+    "depcheck": "^1.4.7",
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
+    "jest": "^29.7.0",
+    "mock-fs": "^5.2.0",
     "postcss": "^8.4.47",
+    "supertest": "^6.3.4",
     "tailwindcss": "^3.4.14",
+    "ts-jest": "^29.1.2",
+    "ts-prune": "^0.10.3",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
     "vite": "^5.4.14"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
-  }
+  },
+  "workspaces": [
+    "client",
+    "server",
+    "shared",
+    "apps/*"
+  ]
 }
